--- a/main.html
+++ b/main.html
@@ -9,6 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	    <blockquote city="https://en.wikipedia.org/wiki/New_Delhi " 
+    style="max-width: 600px; margin: 10px; padding: 15px;border-left: 8px solid green; background-color: #f8fffe;font-weight: bold; ">
+        New Delhi is capital of india and an administrative district of NCT Delhi.
+    </blockquote>
 </script>
 
 </body>
