--- a/main.html
+++ b/main.html
@@ -9,9 +9,16 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+    <h3>What is the capital of India?</h3>
+    <form>
+        <input type="radio" name="city" value="NewDelhi">
+        <label for="New Delhi">New Delhi</label><br>
+        <input type="radio" name="city" value="Mumbai">
+        <label for="Mumbai">Mumbai</label>
+    </form>
 	    <blockquote city="https://en.wikipedia.org/wiki/New_Delhi " 
     style="max-width: 600px; margin: 10px; padding: 15px;border-left: 8px solid green; background-color: #f8fffe;font-weight: bold; ">
-        New Delhi is capital of india and an administrative district of NCT Delhi.
+	    New Delhi is capital of india and an administrative district of NCT Delhi.
     </blockquote>
 </script>
 
