--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <input type="radio" name="city" value="Mumbai">
         <label for="Mumbai">Mumbai</label>
     </form>
-	    <blockquote city="https://en.wikipedia.org/wiki/New_Delhi " 
+	    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi " 
     style="max-width: 600px; margin: 10px; padding: 15px;border-left: 8px solid green; background-color: #f8fffe;font-weight: bold; ">
 	    New Delhi is capital of india and an administrative district of NCT Delhi.
     </blockquote>
