--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     </form>
 	    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi " 
     style="max-width: 600px; margin: 10px; padding: 15px;border-left: 8px solid green; background-color: #f8fffe;font-weight: bold; ">
-	    New Delhi is capital of india and an administrative district of NCT Delhi.
+	   <p> New Delhi is capital of india and an administrative district of NCT Delhi.</p>
     </blockquote>
 </script>
 
