--- a/main.html
+++ b/main.html
@@ -16,8 +16,13 @@
         <label for="Mumbai">Mumbai</label>
     </form>
 	    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" 
-    style="max-width: 600px; margin: 10px; padding: 15px;border-left: 8px solid green; background-color: #f8fffe;font-weight: bold; ">
-	   <p> New Delhi is capital of india and an administrative district of NCT Delhi.</p>
+			style="max-width: 600px; 
+			       margin: 10px;
+			       padding: 15px;border-left:
+			       8px solid green;
+			       background-color: #f8fffe;
+			       font-weight: bold;">
+	    New Delhi is capital of india and an administrative district of NCT Delhi.
     </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
