--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 			       8px solid green;
 			       background-color: #f8fffe;
 			       font-weight: bold;">
-	    New Delhi is capital of india and an administrative district of NCT Delhi.
+	    New Delhi is the capital of India and an administrative district of NCT Delhi.
     </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
